<resources>
    <string name="app_name">fragmentssampleapp</string>


    <string name="tab_1">Label 1</string>
    <string name="tab_2">Label 2</string>
    <string name="tab_3">Label 3</string>
    <string name="tab_4">Label 4</string>
    <string name="tab_5">Label 5</string>

    <string name="menu_1">Menu 1</string>
    <string name="menu_2">Menu 2</string>
    <string name="menu_3">Menu 3</string>
    <string name="menu_4">Menu 4</string>
    <string name="menu_5">Menu 5</string>

    <string name="hero_menu_item_1">Heroes</string>
    <string name="hero_menu_item_2">Detalle</string>
    <string name="hero_menu_item_3">Imagen</string>
    <string name="nombre">Nombre:</string>
    <string name="nombre_real">Nombre Real:</string>
    <string name="team">Team:</string>
    <string name="first">First:</string>
    <string name="creado">Creado:</string>
    <string name="publisher">Publisher:</string>
    <string name="heroes">Heroes</string>
    <string name="peliculas">Peliculas</string>
</resources>
